[package]
name = "neuralsol"
version = "0.1.0"
description = "Simple neural net POC for Solana"
authors = ["Sean Lars Ganser <sean.ganser@gmail.com>"]
repository = "https://github.com/ogmedia/NeuralSOL"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}

[dev-dependencies]
solana-program-test = "=1.6.6"
solana-sdk = "=1.6.6"

[lib]
name = "neuralsol"
crate-type = ["cdylib", "lib"]
